others/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inga-php-application
  labels:
    app: inga-php-application
spec:
  selector:
    app: inga-php-application
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
