others/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inga-php-application
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: ingaphp.vivaweb.dev.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inga-php-application
                port:
                  number: 80
